Bug 228547 - Videos cannot return to thumbnail view
Summary: Videos cannot return to thumbnail view
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Preview-Video (other bugs)
Version First Reported In: 1.2.0
Platform: Unlisted Binaries Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-25 23:26 UTC by Dotan Cohen
Modified: 2017-07-27 10:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dotan Cohen 2010-02-25 23:26:35 UTC
Version:            (using KDE 4.4.0)
Installed from:    Unspecified Linux

When viewing videos, a click on the video does not return the user to the thumbnail view, as is the case with jpeg photos.
Comment 1 caulier.gilles 2010-02-26 10:29:20 UTC
Yes because it's phonon widget, not digiKam widget.

Gilles Caulier
Comment 2 Marcel Wiesweg 2010-02-26 19:05:22 UTC
Can we install an event filter or inherit from the phonon widget to receive mouse events on the display area?
Comment 3 caulier.gilles 2010-02-26 19:22:49 UTC
yes, in theory, if this event is not re-routed by video player backend.

Gilles
Comment 4 Andi Clemens 2010-09-25 20:53:35 UTC
SVN commit 1179524 by aclemens:

Use an eventFilter for the MediaPlayerView, to allow quitting a moview by
pressing the left mouse button.

BUG: 228547

 M  +2 -1      NEWS  
 M  +63 -15    digikam/mediaplayerview.cpp  
 M  +27 -3     digikam/mediaplayerview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1179524