Use an eventFilter for the MediaPlayerView, to allow quitting a moview by pressing the left mouse button.

BUG: 228547

svn path=/trunk/extragear/graphics/digikam/; revision=1179524